--- a/xFunc.App/Views/MainView.xaml
+++ b/xFunc.App/Views/MainView.xaml
@@ -2,6 +2,7 @@
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:ribbon="clr-namespace:Fluent;assembly=Fluent"
+                     xmlns:math="clr-namespace:xFunc.Library.Maths;assembly=xFunc.Library.Maths"
                      Title="xFunc" Width="1024" Height="576" WindowStartupLocation="CenterScreen"
                      Icon="../Images/xFunc.ico">
     <Grid>
@@ -225,7 +226,16 @@
 
         <TabControl Grid.Row="1">
             <TabItem Header="Math Expressions">
-                <ListBox />
+                <ListBox x:Name="mathExpsListBox">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type math:MathWorkspaceItem}">
+                            <StackPanel Orientation="Vertical" TextBlock.FontSize="16">
+                                <TextBlock Text="{Binding Path=StringExpression}" />
+                                <TextBlock Text="{Binding Path=Answer}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </TabItem>
             <TabItem Header="Logic Expressions">
                 <ListBox />
@@ -351,23 +361,23 @@
                         <Button Grid.Row="0" Grid.Column="1">
                             <Rectangle Fill="{StaticResource inv}" Width="20" Height="16" />
                         </Button>
-                        <Button Grid.Row="0" Grid.Column="2">
+                        <Button Grid.Row="0" Grid.Column="2" Tag="sqrt" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource sqrt}" Width="22" Height="16" />
                         </Button>
                         <Button Grid.Row="0" Grid.Column="3">
                             <Rectangle Fill="{StaticResource root}" Width="22" Height="16" />
                         </Button>
 
-                        <Button Grid.Row="1" Grid.Column="0">
+                        <Button Grid.Row="1" Grid.Column="0" Tag="ln" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource ln}" Width="26" Height="16" />
                         </Button>
-                        <Button Grid.Row="1" Grid.Column="1">
+                        <Button Grid.Row="1" Grid.Column="1" Tag="lg" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource lg}" Width="26" Height="16" />
                         </Button>
                         <Button Grid.Row="1" Grid.Column="2">
                             <Rectangle Fill="{StaticResource log}" Width="36" Height="16" />
                         </Button>
-                        <Button Grid.Row="1" Grid.Column="3">
+                        <Button Grid.Row="1" Grid.Column="3" Tag="abs" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource abs}" Width="22" Height="15" />
                         </Button>
                     </Grid>
@@ -424,10 +434,10 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
 
-                        <Button Grid.Row="0" Grid.Column="0">
+                        <Button Grid.Row="0" Grid.Column="0" Tag="π" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource pi}" Width="18" Height="12" />
                         </Button>
-                        <Button Grid.Row="0" Grid.Column="1">
+                        <Button Grid.Row="0" Grid.Column="1" Tag="e" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource exp}" Width="18" Height="12" />
                         </Button>
                     </Grid>
