--- a/xFunc.App/Views/MainView.xaml
+++ b/xFunc.App/Views/MainView.xaml
@@ -8,8 +8,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="*" />
+            <RowDefinition />
+            <RowDefinition Height="128" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -229,12 +229,21 @@
                 <ListBox x:Name="mathExpsListBox">
                     <ListBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type math:MathWorkspaceItem}">
-                            <StackPanel Orientation="Vertical" TextBlock.FontSize="16">
-                                <TextBlock Text="{Binding Path=StringExpression}" />
-                                <TextBlock Text="{Binding Path=Answer}" />
-                            </StackPanel>
+                            <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
+                                <StackPanel Orientation="Vertical" Margin="5,5,0,5">
+                                    <TextBlock Text="Expression:" />
+                                    <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
+                                    <TextBlock Text="Answer:" />
+                                    <TextBlock Text="{Binding Path=Answer}" FontSize="14" Margin="20,2,0,0" />
+                                </StackPanel>
+                            </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListBoxItem}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </ListBox.ItemContainerStyle>
                 </ListBox>
             </TabItem>
             <TabItem Header="Logic Expressions">
@@ -463,7 +472,7 @@
         </ScrollViewer>
 
         <GridSplitter Grid.Row="2" Height="3" HorizontalAlignment="Stretch" VerticalAlignment="Top" />
-        <TextBox x:Name="expressionBox" Grid.Row="2" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" Foreground="Black" />
+        <TextBox x:Name="expressionBox" Grid.Row="2" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" Foreground="Black" KeyUp="ExpressionBox_KeyUp" />
 
         <ribbon:StatusBar Grid.Row="3" Grid.ColumnSpan="2" />
     </Grid>
