--- a/xFunc.App/Views/MainView.xaml
+++ b/xFunc.App/Views/MainView.xaml
@@ -232,8 +232,13 @@
         </ribbon:Ribbon>
 
         <TabControl x:Name="tabControl" Grid.Row="1">
+            <TabControl.Resources>
+                <Style x:Key="listBoxItemStyle" TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </TabControl.Resources>
             <TabItem x:Name="mathTab" Header="Math Expressions">
-                <ListBox x:Name="mathExpsListBox">
+                <ListBox x:Name="mathExpsListBox" ItemContainerStyle="{StaticResource listBoxItemStyle}">
                     <ListBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type math:MathWorkspaceItem}">
                             <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
@@ -246,15 +251,23 @@
                             </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="{x:Type ListBoxItem}">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        </Style>
-                    </ListBox.ItemContainerStyle>
                 </ListBox>
             </TabItem>
             <TabItem x:Name="logicTab" Header="Logic Expressions">
-                <ListBox />
+                <ListBox x:Name="logicExpsListBox" ItemContainerStyle="{StaticResource listBoxItemStyle}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type logic:LogicWorkspaceItem}">
+                            <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
+                                <StackPanel Orientation="Vertical" Margin="5,5,0,5">
+                                    <TextBlock Text="Expression:" />
+                                    <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
+                                    <TextBlock Text="Answer:" />
+                                    <TextBlock Text="{Binding Path=Answer}" FontSize="14" Margin="20,2,0,0" />
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </TabItem>
             <TabItem Header="Graphs"></TabItem>
         </TabControl>
