--- a/xFunc.App/Views/MainView.xaml
+++ b/xFunc.App/Views/MainView.xaml
@@ -1,4 +1,18 @@
-﻿<ribbon:RibbonWindow x:Class="xFunc.App.Views.MainView"
+﻿<!-- Copyright 2012 Dmitry Kischenko
+
+Licensed under the Apache License, Version 2.0 (the "License"); 
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http:www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software 
+distributed under the License is distributed on an "AS IS" BASIS, 
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
+express or implied. 
+See the License for the specific language governing permissions and 
+limitations under the License. -->
+<ribbon:RibbonWindow x:Class="xFunc.App.Views.MainView"
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:ribbon="clr-namespace:Fluent;assembly=Fluent"
@@ -12,6 +26,12 @@
         <CommandBinding Command="local:MainView.RadianCommand" Executed="RadianButton_Execute" CanExecute="AndleButtons_CanExecute" />
         <CommandBinding Command="local:MainView.GradianCommand" Executed="GradianButton_Execute" CanExecute="AndleButtons_CanExecute" />
     </ribbon:RibbonWindow.CommandBindings>
+    <ribbon:RibbonWindow.InputBindings>
+        <KeyBinding Command="local:MainView.DegreeCommand" Key="D" Modifiers="Control+Alt" />
+        <KeyBinding Command="local:MainView.RadianCommand" Key="R" Modifiers="Control+Alt" />
+        <KeyBinding Command="local:MainView.GradianCommand" Key="G" Modifiers="Control+Alt" />
+    </ribbon:RibbonWindow.InputBindings>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -34,17 +54,49 @@
             </ribbon:Ribbon.ToolBarItems>
             <ribbon:RibbonTabItem Header="Home" IsSelected="True">
                 <ribbon:RibbonGroupBox Header="Clipboard">
-                    <ribbon:Button x:Name="undoButton" Header="Undo" Icon="../Images/Undo.png" LargeIcon="../Images/UndoLarge.png" Command="ApplicationCommands.Undo" />
-                    <ribbon:Button x:Name="redoButton" Header="Redo" Icon="../Images/Redo.png" LargeIcon="../Images/RedoLarge.png" Command="ApplicationCommands.Redo" />
+                    <ribbon:Button x:Name="undoButton" Header="Undo" Icon="../Images/Undo.png" LargeIcon="../Images/UndoLarge.png" Command="ApplicationCommands.Undo">
+                        <ribbon:Button.ToolTip>
+                            <ribbon:ScreenTip Title="Undo (Ctrl+Z)" Text="Undo the last change" />
+                        </ribbon:Button.ToolTip>
+                    </ribbon:Button>
+                    <ribbon:Button x:Name="redoButton" Header="Redo" Icon="../Images/Redo.png" LargeIcon="../Images/RedoLarge.png" Command="ApplicationCommands.Redo">
+                        <ribbon:Button.ToolTip>
+                            <ribbon:ScreenTip Title="Redo (Ctrl+R)" Text="Redo the last change" />
+                        </ribbon:Button.ToolTip>
+                    </ribbon:Button>
                     <Separator />
-                    <ribbon:Button Header="Cut" Icon="../Images/Cut.png" LargeIcon="../Images/CutLarge.png" Command="ApplicationCommands.Cut" />
-                    <ribbon:Button Header="Copy" Icon="../Images/Copy.png" LargeIcon="../Images/CopyLarge.png" Command="ApplicationCommands.Copy" />
-                    <ribbon:Button Header="Paste" Icon="../Images/Paste.png" LargeIcon="../Images/PasteLarge.png" Command="ApplicationCommands.Paste" />
+                    <ribbon:Button Header="Cut" Icon="../Images/Cut.png" LargeIcon="../Images/CutLarge.png" Command="ApplicationCommands.Cut">
+                        <ribbon:Button.ToolTip>
+                            <ribbon:ScreenTip Title="Cut (Ctrl+X)" Text="Cut the selected text" />
+                        </ribbon:Button.ToolTip>
+                    </ribbon:Button>
+                    <ribbon:Button Header="Copy" Icon="../Images/Copy.png" LargeIcon="../Images/CopyLarge.png" Command="ApplicationCommands.Copy">
+                        <ribbon:Button.ToolTip>
+                            <ribbon:ScreenTip Title="Copy (Ctrl+C)" Text="Copy the selected text" />
+                        </ribbon:Button.ToolTip>
+                    </ribbon:Button>
+                    <ribbon:Button Header="Paste" Icon="../Images/Paste.png" LargeIcon="../Images/PasteLarge.png" Command="ApplicationCommands.Paste">
+                        <ribbon:Button.ToolTip>
+                            <ribbon:ScreenTip Title="Paste (Ctrl+P)" Text="Paste text from clipboard" />
+                        </ribbon:Button.ToolTip>
+                    </ribbon:Button>
                 </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox Header="Angles">
-                    <ribbon:ToggleButton x:Name="degreeButton" Header="Degree" LargeIcon="../Images/DegreeLarge.png" Command="local:MainView.DegreeCommand" />
-                    <ribbon:ToggleButton x:Name="radianButton" Header="Radian" LargeIcon="../Images/RadianLarge.png" Command="local:MainView.RadianCommand" />
-                    <ribbon:ToggleButton x:Name="gradianButton" Header="Gradian" LargeIcon="../Images/GradianLarge.png" Command="local:MainView.GradianCommand" />
+                    <ribbon:ToggleButton x:Name="degreeButton" Header="Degree" LargeIcon="../Images/DegreeLarge.png" Command="local:MainView.DegreeCommand">
+                        <ribbon:ToggleButton.ToolTip>
+                            <ribbon:ScreenTip Title="Degree (Ctrl+Alt+D)" Text="Degrees as a unit of angle measure" />
+                        </ribbon:ToggleButton.ToolTip>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="radianButton" Header="Radian" LargeIcon="../Images/RadianLarge.png" Command="local:MainView.RadianCommand">
+                        <ribbon:ToggleButton.ToolTip>
+                            <ribbon:ScreenTip Title="Radian (Ctrl+Alt+R)" Text="Radians as a unit of angle measure" />
+                        </ribbon:ToggleButton.ToolTip>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="gradianButton" Header="Gradian" LargeIcon="../Images/GradianLarge.png" Command="local:MainView.GradianCommand">
+                        <ribbon:ToggleButton.ToolTip>
+                            <ribbon:ScreenTip Title="Gradian (Ctrl+Alt+G)" Text="Gradians as a unit of angle measure" />
+                        </ribbon:ToggleButton.ToolTip>
+                    </ribbon:ToggleButton>
                 </ribbon:RibbonGroupBox>
             </ribbon:RibbonTabItem>
             <ribbon:RibbonTabItem Header="Insert">
@@ -222,9 +274,6 @@
                 </ribbon:RibbonGroupBox>
             </ribbon:RibbonTabItem>
             <ribbon:RibbonTabItem Header="View">
-                <ribbon:RibbonGroupBox Header="Show">
-                    <ribbon:ToggleButton Header="Operations" IsChecked="True" />
-                </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox Header="Font">
                     <ribbon:Spinner x:Name="fontSizeSpinner" Header="Size:" Width="90" Minimum="8" Maximum="96" Value="24" TextBlock.TextAlignment="Right" Format="" />
                 </ribbon:RibbonGroupBox>
