Changed the font.

--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -295,7 +295,7 @@ limitations under the License. -->
                                     <TextBlock Text="Expression:" />
                                     <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
                                     <TextBlock Text="Answer:" />
-                                    <TextBlock Text="{Binding Path=Answer}" FontSize="14" Margin="20,2,0,0" />
+                                    <TextBlock Text="{Binding Path=Answer}" FontSize="16" Margin="20,2,0,0" />
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
@@ -555,7 +555,7 @@ limitations under the License. -->
         </ScrollViewer>
 
         <GridSplitter Grid.Row="2" Height="3" HorizontalAlignment="Stretch" VerticalAlignment="Top" />
-        <TextBox x:Name="expressionBox" Grid.Row="2" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" Foreground="Black" KeyUp="ExpressionBox_KeyUp" />
+        <TextBox x:Name="expressionBox" Grid.Row="2" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" FontFamily="Lucida Calligraphy" Foreground="Black" KeyUp="ExpressionBox_KeyUp" />
 
         <ribbon:StatusBar Grid.Row="3" Grid.ColumnSpan="2">
             <ribbon:StatusBarItem HorizontalAlignment="Left" VerticalAlignment="Center">
