--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -36,7 +36,6 @@ limitations under the License. -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
-            <RowDefinition Height="128" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -287,42 +286,59 @@ limitations under the License. -->
                 </Style>
             </TabControl.Resources>
             <TabItem x:Name="mathTab" Header="Math Expressions">
-                <ListBox x:Name="mathExpsListBox" ItemContainerStyle="{StaticResource listBoxItemStyle}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate DataType="{x:Type math:MathWorkspaceItem}">
-                            <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
-                                <StackPanel Orientation="Vertical" Margin="5,5,0,5">
-                                    <TextBlock Text="Expression:" />
-                                    <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
-                                    <TextBlock Text="Answer:" />
-                                    <TextBlock Text="{Binding Path=Answer}" FontSize="16" Margin="20,2,0,0" />
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="128" />
+                    </Grid.RowDefinitions>
+                    <ListBox x:Name="mathExpsListBox" Grid.Row="0" ItemContainerStyle="{StaticResource listBoxItemStyle}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate DataType="{x:Type math:MathWorkspaceItem}">
+                                <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
+                                    <StackPanel Orientation="Vertical" Margin="5,5,0,5">
+                                        <TextBlock Text="Expression:" />
+                                        <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
+                                        <TextBlock Text="Answer:" />
+                                        <TextBlock Text="{Binding Path=Answer}" FontSize="16" Margin="20,2,0,0" />
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="3" />
+                    <TextBox x:Name="mathExpressionBox" Grid.Row="1" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" FontFamily="Lucida Calligraphy" Foreground="Black" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" KeyUp="mathExpressionBox_KeyUp" />
+                </Grid>
             </TabItem>
             <TabItem x:Name="logicTab" Header="Logic Expressions">
-                <ListBox x:Name="logicExpsListBox" ItemContainerStyle="{StaticResource listBoxItemStyle}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate DataType="{x:Type logic:LogicWorkspaceItem}">
-                            <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
-                                <StackPanel Orientation="Vertical" Margin="5,5,0,5">
-                                    <TextBlock Text="Expression:" />
-                                    <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
-                                    <TextBlock Text="Answer:" />
-                                    <TextBlock Text="{Binding Path=Answer}" FontSize="14" Margin="20,2,0,0" />
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="128" />
+                    </Grid.RowDefinitions>
+
+                    <ListBox x:Name="logicExpsListBox" Grid.Row="0" ItemContainerStyle="{StaticResource listBoxItemStyle}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate DataType="{x:Type logic:LogicWorkspaceItem}">
+                                <Border BorderBrush="Silver" BorderThickness="0,0,0,1">
+                                    <StackPanel Orientation="Vertical" Margin="5,5,0,5">
+                                        <TextBlock Text="Expression:" />
+                                        <TextBlock Text="{Binding Path=StringExpression}" FontSize="16" Margin="20,2,0,5" />
+                                        <TextBlock Text="Answer:" />
+                                        <TextBlock Text="{Binding Path=Answer}" FontSize="14" Margin="20,2,0,0" />
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="3" />
+                    <TextBox x:Name="logicExpressionBox" Grid.Row="1" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" FontFamily="Lucida Calligraphy" Foreground="Black" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" KeyUp="logicExpressionBox_KeyUp" />
+                </Grid>
             </TabItem>
             <TabItem Header="Graphs"></TabItem>
         </TabControl>
 
         <GridSplitter Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Width="3" HorizontalAlignment="Left" VerticalAlignment="Stretch" />
-        <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="3,0,0,0" Background="White" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="1" Grid.Column="1" Margin="3,0,0,0" Background="White" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
             <StackPanel>
                 <StackPanel.Resources>
                     <Style TargetType="{x:Type Button}">
@@ -553,9 +569,6 @@ limitations under the License. -->
                 </Expander>
             </StackPanel>
         </ScrollViewer>
-
-        <GridSplitter Grid.Row="2" Height="3" HorizontalAlignment="Stretch" VerticalAlignment="Top" />
-        <TextBox x:Name="expressionBox" Grid.Row="2" Margin="0,3,0,0" FontSize="{Binding Path=Value, ElementName=fontSizeSpinner}" FontFamily="Lucida Calligraphy" Foreground="Black" KeyUp="ExpressionBox_KeyUp" />
 
         <ribbon:StatusBar Grid.Row="3" Grid.ColumnSpan="2">
             <ribbon:StatusBarItem HorizontalAlignment="Left" VerticalAlignment="Center">
